# Localizing_planning_robotics

./: CMakeLists.txt  info.txt  package.xml  readme.md  readme.txt  waypoints.csv
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  slam_config_3D.yaml
launch/: amcl.launch.xml  mapping.launch  navigation.launch  turtlebot_amcl.launch
maps/: map.pgm  map.yaml  map2.pgm  map2.yaml
maps/stage/: map.world
rviz/: mapping.rviz
src/: base_to_lidar.cpp  navigation.cpp  tf_publisher.cpp
